AllocObject and Unsafe.allocateInstance segfault for primitive types

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: hs25
    • Component/s: hotspot
    • None
    • b03

      Currently, calling AllocObject or Unsafe.allocateInstance with a primitive type (e.g. unsafe.allocateInstance(int.class)) leads to a segmentation fault because Classes representing primitive types do not have an associated Klass.

      While AllocObject or allocateInstance should in principle never be called with a Class representing a primitive, it should probably not crash in such a case since it throws sensible exceptions for many other invalid arguments (interfaces, abstract types, arrays, j.l.Class).

            Assignee:
            Coleen Phillimore
            Reporter:
            Gilles Duboscq
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: