8031427: AllocObject and Unsafe.allocateInstance segfault for primitive types

The fix just throws an InstantiationException if the Klass is NULL.

Reviewed-by: coleenp, twisti, jrose